--- a/rsna-notebook.ipynb
+++ b/rsna-notebook.ipynb
@@ -341,7 +341,8 @@
     "df_train_melted = df_train_melted.rename(columns={'value': 'severity'})\n",
     "df_final = df_train_desc.merge(df_train_melted, on=[\"study_id\",\"level\",\"condition\"],how=\"left\")\n",
     "df_final = df_final.merge(df_train_series_desc,on=[\"study_id\",\"series_id\"],how=\"left\")\n",
-    "df_final = df_final.rename(columns={'series_description': 'orientation'})\n"
+    "df_final = df_final.rename(columns={'series_description': 'orientation'})\n",
+    "df_final = df_final.dropna()"
    ]
   },
   {
